Fix text wrap on small viewport

--- a/apps/ytd_web/web/static/css/app.scss
+++ b/apps/ytd_web/web/static/css/app.scss
@@ -16,7 +16,7 @@ $line-height-base: 1.1;
   }
 
   @media (max-width: $screen-sm) {
-    font-size: 20px;
+    font-size: 18px;
   }
 
   padding-top: 10px;
